--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "accenture-test": {
+    "bookmarks": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/accenture-test",
+            "outputPath": "dist/bookmarks",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -67,18 +68,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "accenture-test:build"
+            "browserTarget": "bookmarks:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "accenture-test:build:production"
+              "browserTarget": "bookmarks:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "accenture-test:build"
+            "browserTarget": "bookmarks:build"
           }
         },
         "test": {
@@ -93,6 +94,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -115,15 +117,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "accenture-test:serve"
+            "devServerTarget": "bookmarks:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "accenture-test:serve:production"
+              "devServerTarget": "bookmarks:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "accenture-test"
+    }
+  },
+  "defaultProject": "bookmarks"
 }
