--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,5 +47,5 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: deploy_dist/angular-demo
+          FOLDER: deploy_dist/bookmarks
 
